# dy-oppty-agent

./: README.md  pyproject.toml  typer.py
.github/workflows/: ci.yml
oppty_agent/: __init__.py  cli.py
oppty_agent/browser/: __init__.py  artifacts.py  manifest.py  risk.py  runner.py  selectors.py  state_machine.py
oppty_agent/config/: example.yaml
oppty_agent/etl/: __init__.py  mapping.py  models.py  parse_export.py
oppty_agent/selection/: __init__.py  report.py  scoring.py
tests/: test_cli.py  test_manifest.py  test_manifest_and_risk.py  test_risk.py  test_smoke.py
