[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oppty-agent"
version = "0.1.0"
description = "Opportunity export automation scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.40.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
